--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
-    "pg": "^8.11.1"
+    "jsonwebtoken": "^9.0.1",
+    "pg": "^8.11.1",
+    "uuid": "^9.0.0"
   },
   "name": "apify",
   "version": "1.0.0",
